Fix Icon Spacing in XS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -187,7 +187,7 @@ div {
 
 
 .icon {
-	padding: 10px;
+	padding: 9px;
 	margin-top: 2px;
 	font-size: 36px;
 }
